Bug 138545 - Mouse Pointer view does not change to "Click Link" ("Hand") when hovering over hyperlink
Summary: Mouse Pointer view does not change to "Click Link" ("Hand") when hovering ove...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
: 140504 142167 (view as bug list)
Depends on:
Blocks: Hyperlink
  Show dependency treegraph
 
Reported: 2020-11-29 10:06 UTC by Rainer Bielefeld Retired
Modified: 2021-07-07 13:53 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (107.21 KB, application/vnd.oasis.opendocument.text)
2020-11-29 14:44 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2020-11-29 10:06:30 UTC
Steps how to reproduce with LibO: 7.2.0.0.alpha0+ (x64) Build ID a470932949c3e8ee28aaf77a71a90a957bbfe1ce
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win Locale: de-DE (de_DE); UI: en-US Calc: threaded:

1. Launch LibO Writer (with disabled security preference "strl+click" for hyperlinks)
2. Open Existing document with links in ToC and Kinks to Internet in Text
3. Hover mouse over hyperlinks
   » Expected: Mouse Pointer view changes to "hand"
     Actual: ToolTip appears, but mouse pointer view does not change   😥
             (but clicking link works fine, focus will move to linked target)

Additional Information
----------------------
a) not 100 % reproducible. Current Suspect: related to old existing documents
a1) I will try to create a test document, soon
b) Also reproducible with same Version on WIN10
c) No problem in CALC
Comment 1 Rainer Bielefeld Retired 2020-11-29 10:12:16 UTC
d) No obvious DUPs found with https://bugs.documentfoundation.org/buglist.cgi?cmdtype=dorem&remaction=run&namedcmd=DUPs138545&sharer_id=19321
Comment 2 Rainer Bielefeld Retired 2020-11-29 10:12:50 UTC
e) I nver saw this with KibI 6.x
Comment 3 Rainer Bielefeld Retired 2020-11-29 11:41:57 UTC
e) I never saw that with LibO 6.x

(And I need a new Keyboard - and new fingers)
Comment 4 Rainer Bielefeld Retired 2020-11-29 14:44:14 UTC
Created attachment 167644 [details]
Sample Document

Attached document reproduces the problem with build from original report on WIN7 and WIN10
Comment 5 Dieter 2020-12-21 07:29:09 UTC
Reproducible with attachment from comment 4 and with

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 315c7570c4a72f4c834086082825533b1e50d1bf
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: threaded

I press Strg => nothing happens

but not with

Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: threaded

i press Strg => Cursor changes to hand
Comment 6 Martin Srdoš 2020-12-23 17:31:18 UTC
Bisected:
 868817f2708fa30b0f7bc3310b0ed732c03c412a is the first bad commit
commit 868817f2708fa30b0f7bc3310b0ed732c03c412a
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Jul 30 04:43:33 2020 -0700

    source 5ab17ad2696aeb8acfc21cd2442908b785a53e86

    source 5ab17ad2696aeb8acfc21cd2442908b785a53e86

I am adding Jim Raykowski to CC list.
Comment 7 Jim Raykowski 2020-12-25 02:45:40 UTC
Code introduced in the outline content visibility feature to change the mouse pointer to a hand pointer when the ctrl key is held and mouse pointer is positioned over an outline frame is interfering with the mouse pointer not changing when over a hyperlink located in an outline frame. 

Here is a rework to make both work as expected:
https://gerrit.libreoffice.org/c/core/+/108275

@Martin, Thank you for the bisect!
Comment 8 Commit Notification 2020-12-26 16:10:15 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6204c94aeec9f65244c487edecf03a78c5740fbc

tdf#138545 fix mouse pointer not changing when over a hyperlink

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Martin Srdoš 2020-12-27 12:31:00 UTC
(In reply to Commit Notification from comment #8)
> Jim Raykowski committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> 6204c94aeec9f65244c487edecf03a78c5740fbc
> 
> tdf#138545 fix mouse pointer not changing when over a hyperlink
> 
> It will be available in 7.2.0.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Works good for me.
Comment 10 Dieter 2020-12-27 12:57:47 UTC
(In reply to Martin Srdoš from comment #9)

> Works good for me.

=> VERIFIED FIXED
Comment 11 Harshita Nag 2021-06-22 13:26:26 UTC
*** Bug 142167 has been marked as a duplicate of this bug. ***
Comment 12 Michael Weghorn 2021-07-07 06:17:27 UTC
*** Bug 140504 has been marked as a duplicate of this bug. ***
Comment 13 Robert Großkopf 2021-07-07 13:53:27 UTC
Could it be also backported to LO 7.1.*? Bug is the same there.