tdf#138545 fix mouse pointer not changing when over a hyperlink

located in an outline node frame

This is a rework of code introduced to change mouse pointer to a hand
icon when the outline content visibility feature is enabled and the
mouse pointer is positioned over an outline node frame with ctrl key
held.

Change-Id: Ia30a8f951b341a4f44f8b900cc756c205f6a273d